--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,8 @@
   <license>TODO: License declaration</license>
   <depend>xacro</depend>
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
