--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,9 @@ endif()
 install(
   DIRECTORY
     launch
-    models
+    description
+    worlds
+    config
   DESTINATION
     share/${PROJECT_NAME}/
 )
