--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,8 @@
   <depend>xacro</depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>slam_toolbox</exec_depend>
+  <exec_depend>rviz2</exec_depend>
   
   <export>
     <build_type>ament_cmake</build_type>
