--- a/config/mapper_params_online_async.yaml
+++ b/config/mapper_params_online_async.yaml
@@ -26,11 +26,11 @@ slam_toolbox:
 
     debug_logging: false
     throttle_scans: 1
-    transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 3.0
+    transform_publish_period: 0.0625 #if 0 never publishes odometry
+    map_update_interval: 0.05
     resolution: 0.05
-    max_laser_range: 30.0 #for rastering images
-    minimum_time_interval: 0.5
+    max_laser_range: 4.0 #for rastering images
+    minimum_time_interval: 0.05
     transform_timeout: 0.2
     tf_buffer_duration: 30.
     stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
@@ -41,8 +41,8 @@ slam_toolbox:
     use_scan_barycenter: true
     minimum_travel_distance: 0.5
     minimum_travel_heading: 0.5
-    scan_buffer_size: 10
-    scan_buffer_maximum_scan_distance: 10.0
+    scan_buffer_size: 20
+    scan_buffer_maximum_scan_distance: 10.0 #0.05
     link_match_minimum_response_fine: 0.1  
     link_scan_maximum_distance: 1.5
     loop_search_maximum_distance: 3.0
